--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
