--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -23,6 +23,7 @@
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.1",
     "zone.js": "~0.8.26"
