--- a/angular.json
+++ b/angular.json
@@ -3,31 +3,32 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "aluno-academia": {
+    "aluno-academia-pwa": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "sass"
+          "styleext": "scss"
         }
       },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/aluno-academia",
+            "outputPath": "dist/aluno-academia-pwa",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
@@ -50,25 +51,26 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "serviceWorker": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "aluno-academia:build"
+            "browserTarget": "aluno-academia-pwa:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "aluno-academia:build:production"
+              "browserTarget": "aluno-academia-pwa:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "aluno-academia:build"
+            "browserTarget": "aluno-academia-pwa:build"
           }
         },
         "test": {
@@ -79,12 +81,13 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.sass"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
@@ -102,7 +105,7 @@
         }
       }
     },
-    "aluno-academia-e2e": {
+    "aluno-academia-pwa-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -110,11 +113,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "aluno-academia:serve"
+            "devServerTarget": "aluno-academia-pwa:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "aluno-academia:serve:production"
+              "devServerTarget": "aluno-academia-pwa:serve:production"
             }
           }
         },
@@ -130,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "aluno-academia"
+  "defaultProject": "aluno-academia-pwa"
 }
