--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.1.0",
-    "@types/youtube": "0.0.34",
-    "bootstrap-sass": "^3.3.7",
     "@angular/service-worker": "^6.1.0",
+    "@types/youtube": "0.0.34",
+    "bootstrap": "^4.1.3",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-toastr": "^9.0.2",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.1",
     "zone.js": "~0.8.26"
