Alteracacao no nome da aplicacao

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "aluno-academia-pwa",
-  "short_name": "aluno-academia-pwa",
+  "name": "Platform FIT",
+  "short_name": "Platform FIT",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
