--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng-table": "^3.0.1",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.3.5",
     "ngx-toastr": "^9.0.2",
     "popper.js": "^1.14.3",
-    "rxjs": "~6.2.0",
-    "rxjs-compat": "^6.3.1",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
