--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
+    "@ng-select/ng-select": "^2.12.1",
     "@types/youtube": "0.0.34",
     "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.3.7",
@@ -29,6 +30,7 @@
     "jquery": "^3.3.1",
     "ng-table": "^3.0.1",
     "ng2-completer": "^2.0.8",
+    "ng2-datepicker": "^3.1.1",
     "ng2-smart-table": "^1.3.5",
     "ngx-toastr": "^9.0.2",
     "popper.js": "^1.14.3",
